@@ -1,5 +1,10 @@
 2007-08-13  Stefan Kost  <ensonic@users.sf.net>
 
+	* gtkdoc-mkdb.in:
+	  Fix the funny side-effect of last 'broken-returns' fix.
+
+2007-08-13  Stefan Kost  <ensonic@users.sf.net>
+
 	* gtkdoc-scan.in:
 	* tests/bugs/src/tester.h:
 	  Really fix #460127.
